--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.8",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
     "gsap": "^3.12.5",
